--- a/src/html/_modals.htm
+++ b/src/html/_modals.htm
@@ -9,11 +9,15 @@
           </svg>
         </button>
         <div class="modal__inner">
-          <h2 class="modal__heading"></h2>
+          <h2 class="modal__heading">
+            <span class="num">5×1000</span> FREEBETS FOR ALL NEWIES AT
+          </h2>
           <a href="#" class="modal__logo"
             ><img src="@img/logos/pari.svg" alt="" class="modal__logo-img"
           /></a>
-          <a href="#" class="modal__btn frame-btn frame-btn_black">
+          <a
+            href="https://i.pari.ru/pvcs2025"
+            class="modal__btn frame-btn frame-btn_black">
             <span class="frame-btn__inner">
               <span class="frame-btn__txt">GO</span>
             </span>
