--- a/app/schedule.html
+++ b/app/schedule.html
@@ -335,7 +335,32 @@
 					</li>
 				</ul>
 			</main>
-
+			<!-- пари промо -->
+			<div id="pariPromoModal" aria-hidden="true" class="modal">
+				<div class="modal__wrapper">
+					<div class="modal__content">
+						<div class="modal__body">
+							<button data-close type="button" class="modal__close">
+								<svg>
+									<use href="#cross-svg"></use>
+								</svg>
+							</button>
+							<div class="modal__inner">
+								<h2 class="modal__heading">
+									<span class="num">5×1000</span> FREEBETS FOR ALL NEWIES AT
+								</h2>
+								<a href="#" class="modal__logo"><img src="img/logos/pari.svg" alt="" class="modal__logo-img" /></a>
+								<a href="https://i.pari.ru/pvcs2025" class="modal__btn frame-btn frame-btn_black">
+									<span class="frame-btn__inner">
+										<span class="frame-btn__txt">GO</span>
+									</span>
+									<span class="border"><span class="border__inner"></span></span>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 			<div id="loader" class="preloader">
 				<div class="preloader__container container">
 					<div class="preloader__row">
@@ -505,6 +530,17 @@
     opacity: 0;
     transform: translate(-100%, -100%);
   ">
+				<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 1 1" fill="none" preserveAspectRatio="none">
+					<clipPath id="f-4svg" clipPathUnits="objectBoundingBox">
+						<path d="M0,0.988 V0.016 C0,0.009,0.004,0.003,0.01,0.003 L0.927,0.001 C0.932,0.001,0.935,0.005,0.937,0.011 L0.946,0.05 C0.947,0.056,0.951,0.06,0.955,0.06 H0.99 C0.996,0.06,1,0.066,1,0.073 V0.988 C1,0.995,0.996,1,0.99,1 H0.01 C0.004,1,0,0.995,0,0.988" fill="#2BFFE8" />
+					</clipPath>
+				</svg>
+				<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 1 1" fill="none" preserveAspectRatio="none">
+					<clipPath id="f-3svg" clipPathUnits="objectBoundingBox">
+						<path d="M0,0.989 V0.017 C0,0.009,0.003,0.003,0.006,0.003 H0.959 C0.961,0.003,0.963,0.007,0.964,0.013 L0.97,0.059 C0.97,0.065,0.973,0.069,0.975,0.069 H0.994 C0.997,0.069,1,0.075,1,0.083 V0.989 C1,0.997,0.997,1,0.994,1 H0.006 C0.003,1,0,0.997,0,0.989" fill="#2BFFE8" />
+					</clipPath>
+				</svg>
+
 				<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 1 1" fill="none" preserveAspectRatio="none">
 					<clipPath id="f-1svg" clipPathUnits="objectBoundingBox">
 						<path fill="#2BFFE8" fill-rule="evenodd" clip-rule="evenodd" d="M0,0.989 V0.011 C0,0.005,0.002,0,0.005,0 H0.97 C0.972,0,0.973,0.001,0.975,0.003 L0.987,0.02 C0.988,0.021,0.989,0.021,0.99,0.021 H0.995 C0.998,0.021,1,0.026,1,0.033 V0.989 C1,0.995,0.998,1,0.995,1 H0.005 C0.002,1,0,0.995,0,0.989" />
