--- a/src/schedule.html
+++ b/src/schedule.html
@@ -126,9 +126,8 @@
             </li>
           </ul>
         </main>
-
-        @@include('html/_preloader.htm',{}) @@include('html/_footer.htm',{})
-        @@include('html/_svg.htm',{})
+        @@include('html/_modals.htm',{}) @@include('html/_preloader.htm',{})
+        @@include('html/_footer.htm',{}) @@include('html/_svg.htm',{})
       </div>
     </div>
 
