--- a/src/index.html
+++ b/src/index.html
@@ -173,6 +173,9 @@
         <li>
           <a target="_blank" href="./schedule.html"> schedule </a>
         </li>
+        <li>
+          <a target="_blank" href="./error-page.html"> error page </a>
+        </li>
       </ul>
     </div>
     <style>
