--- a/app/index.html
+++ b/app/index.html
@@ -178,6 +178,9 @@
 			<li>
 				<a target="_blank" href="./schedule.html"> schedule </a>
 			</li>
+			<li>
+				<a target="_blank" href="./error-page.html"> error page </a>
+			</li>
 		</ul>
 	</div>
 	<style>
