--- a/src/html/_menu.htm
+++ b/src/html/_menu.htm
@@ -1,5 +1,15 @@
 <div class="menu">
   <div class="menu__inner">
+    <ul class="menu__lang lang-menu">
+      <li class="lang-menu__item _is-hidden">
+        <input type="radio" checked name="menuLang" class="lang-menu__input" />
+        <span class="lang-menu__txt">en</span>
+      </li>
+      <li class="lang-menu__item">
+        <input type="radio" name="menuLang" class="lang-menu__input" />
+        <span class="lang-menu__txt">ru</span>
+      </li>
+    </ul>
     <button type="button" class="menu__close-btn">BACK</button>
     <nav class="menu__nav">
       <a href="#news" class="menu__nav-link"><span>NEWS</span></a>
