--- a/app/schedule.html
+++ b/app/schedule.html
@@ -356,10 +356,15 @@
 								</svg>
 							</button>
 							<div class="modal__inner">
-								<h2 class="modal__heading">
-									<span class="num">5×1000</span> FREEBETS FOR ALL NEWIES AT
-								</h2>
-								<a href="#" class="modal__logo"><img src="img/logos/pari.svg" alt="" class="modal__logo-img" /></a>
+								<div class="modal__group">
+									<h2 class="modal__heading">
+										<span class="num">5×1000</span>
+									</h2>
+									<p style="background-image: url('img/logos/pari.svg')" class="modal__txt">
+										Freebets for  all newies at
+									</p>
+								</div>
+
 								<a href="https://i.pari.ru/pvcs2025" class="modal__btn frame-btn frame-btn_black">
 									<span class="frame-btn__inner">
 										<span class="frame-btn__txt">GO</span>
