--- a/app/home.html
+++ b/app/home.html
@@ -192,28 +192,27 @@
 							<div class="leaders__group leaders__group_center">
 								<div class="leaders__images-wrap">
 									<div class="leaders__image-wrap">
-										<img src="img/content/2090007847.webp" class="leaders__image" alt="" />
+										<img src="img/content/prv_noone.webp" class="leaders__image" alt="" />
 									</div>
 								</div>
 							</div>
 							<div class="leaders__group">
 								<div class="leaders__images-wrap">
 									<div class="leaders__image-wrap">
-										<img src="img/content/20900078444e.webp" class="leaders__image" alt="" />
-										<img src="img/content/20930007848.webp" class="leaders__image _mobile-only" alt="" />
+										<img src="img/content/prv_dukalis.webp" class="leaders__image" alt="" />
 									</div>
 									<div class="leaders__image-wrap">
-										<img src="img/content/2131327190.webp" class="leaders__image" alt="" />
+										<img src="img/content/prv_9class.webp" class="leaders__image" alt="" />
 									</div>
 								</div>
 							</div>
 							<div class="leaders__group">
 								<div class="leaders__images-wrap">
 									<div class="leaders__image-wrap">
-										<img src="img/content/2090007844.webp" class="leaders__image" alt="" />
+										<img src="img/content/prv_satanic.webp" class="leaders__image" alt="" />
 									</div>
 									<div class="leaders__image-wrap">
-										<img src="img/content/2090007849.webp" class="leaders__image" alt="" />
+										<img src="img/content/prv_dm.webp" class="leaders__image" alt="" />
 									</div>
 								</div>
 							</div>
@@ -574,7 +573,7 @@
 						<li class="homepage-table__list-item list-item-homepage-table">
 							<div class="list-item-homepage-table__inner">
 								<div class="list-item-homepage-table__icon">
-									<img src="img/content/AM2.webp" class="list-item-homepage-table__icon-img" alt="" />
+									<img src="img/logos/cs.svg" alt="" class="list-item-homepage-table__icon-img" />
 								</div>
 								<div class="list-item-homepage-table__info">
 									<span class="list-item-homepage-table__heading txt-s">
@@ -593,7 +592,7 @@
 						<li class="homepage-table__list-item list-item-homepage-table">
 							<div class="list-item-homepage-table__inner">
 								<div class="list-item-homepage-table__icon">
-									<img src="img/content/AM2.webp" class="list-item-homepage-table__icon-img" alt="" />
+									<img src="img/logos/cs.svg" alt="" class="list-item-homepage-table__icon-img" />
 								</div>
 								<div class="list-item-homepage-table__info">
 									<span class="list-item-homepage-table__heading txt-s">
