--- a/src/html/_homepage-table.htm
+++ b/src/html/_homepage-table.htm
@@ -51,9 +51,9 @@
         <div class="list-item-homepage-table__inner">
           <div class="list-item-homepage-table__icon">
             <img
-              src="@img/content/AM2.webp"
-              class="list-item-homepage-table__icon-img"
-              alt="" />
+              src="@img/logos/cs.svg"
+              alt=""
+              class="list-item-homepage-table__icon-img" />
           </div>
           <div class="list-item-homepage-table__info">
             <span class="list-item-homepage-table__heading txt-s">
@@ -75,9 +75,9 @@
         <div class="list-item-homepage-table__inner">
           <div class="list-item-homepage-table__icon">
             <img
-              src="@img/content/AM2.webp"
-              class="list-item-homepage-table__icon-img"
-              alt="" />
+              src="@img/logos/cs.svg"
+              alt=""
+              class="list-item-homepage-table__icon-img" />
           </div>
           <div class="list-item-homepage-table__info">
             <span class="list-item-homepage-table__heading txt-s">
