--- a/src/html/leaders.htm
+++ b/src/html/leaders.htm
@@ -5,7 +5,7 @@
         <div class="leaders__images-wrap">
           <div class="leaders__image-wrap">
             <img
-              src="@img/content/2090007847.webp"
+              src="@img/content/prv_noone.webp"
               class="leaders__image"
               alt="" />
           </div>
@@ -15,17 +15,13 @@
         <div class="leaders__images-wrap">
           <div class="leaders__image-wrap">
             <img
-              src="@img/content/20900078444e.webp"
+              src="@img/content/prv_dukalis.webp"
               class="leaders__image"
-              alt="" />
-            <img
-              src="@img/content/20930007848.webp"
-              class="leaders__image _mobile-only"
               alt="" />
           </div>
           <div class="leaders__image-wrap">
             <img
-              src="@img/content/2131327190.webp"
+              src="@img/content/prv_9class.webp"
               class="leaders__image"
               alt="" />
           </div>
@@ -35,15 +31,12 @@
         <div class="leaders__images-wrap">
           <div class="leaders__image-wrap">
             <img
-              src="@img/content/2090007844.webp"
+              src="@img/content/prv_satanic.webp"
               class="leaders__image"
               alt="" />
           </div>
           <div class="leaders__image-wrap">
-            <img
-              src="@img/content/2090007849.webp"
-              class="leaders__image"
-              alt="" />
+            <img src="@img/content/prv_dm.webp" class="leaders__image" alt="" />
           </div>
         </div>
       </div>
