--- a/src/html/gallery.htm
+++ b/src/html/gallery.htm
@@ -69,6 +69,9 @@
       </div>
     </div>
     <div class="gallery__row">
+      <button type="button" class="gallery__go-back link link_blue">
+        Go Back
+      </button>
       <button type="button" class="gallery__share link link_blue">
         Share Photo
       </button>
