--- a/app/home.html
+++ b/app/home.html
@@ -402,10 +402,58 @@
 								©PARI COMPANY, <span data-current-year></span> GENERAL SPONSOR
 							</p>
 						</div>
+
 						<ul class="links__list">
 							<li class="links__item links__item_social">
 								<span class="links__heading h-x">SOCIAL</span>
 								<div class="links__content">
+									<ul class="links__socials links__socials_exp">
+										<li class="links__socials-item">
+											<span class="links__socials-item-inner"><svg>
+													<use href="#tt-svg"></use>
+												</svg></span>
+											<ul class="links__socials-sublist">
+												<li class="links__socials-sublist-item">
+													<a href="#" target="_blank" class="links__socials-sublist-item-txt">CS2</a>
+												</li>
+												<li class="links__socials-sublist-item">
+													<a href="#" target="_blank" class="links__socials-sublist-item-txt">Dota 2</a>
+												</li>
+											</ul>
+										</li>
+										<li class="links__socials-item">
+											<span class="links__socials-item-inner"><svg>
+													<use href="#yt-svg"></use>
+												</svg></span>
+											<ul class="links__socials-sublist">
+												<li class="links__socials-sublist-item">
+													<a href="#" target="_blank" class="links__socials-sublist-item-txt">CS2</a>
+												</li>
+												<li class="links__socials-sublist-item">
+													<a href="#" target="_blank" class="links__socials-sublist-item-txt">Dota 2</a>
+												</li>
+											</ul>
+										</li>
+										<li class="links__socials-item">
+											<span class="links__socials-item-inner"><svg>
+													<use href="#tg-svg"></use>
+												</svg></span>
+											<ul class="links__socials-sublist">
+												<li class="links__socials-sublist-item">
+													<a href="#" target="_blank" class="links__socials-sublist-item-txt">CS2</a>
+												</li>
+												<li class="links__socials-sublist-item">
+													<a href="#" target="_blank" class="links__socials-sublist-item-txt">Dota 2</a>
+												</li>
+												<li class="links__socials-sublist-item">
+													<a href="#" target="_blank" class="links__socials-sublist-item-txt">MT</a>
+												</li>
+												<li class="links__socials-sublist-item">
+													<a href="#" target="_blank" class="links__socials-sublist-item-txt">Live</a>
+												</li>
+											</ul>
+										</li>
+									</ul>
 									<ul class="links__socials">
 										<li class="links__socials-item">
 											<a href="#" target="_blank" class="links__socials-item-inner"><svg>
@@ -419,27 +467,7 @@
 										</li>
 										<li class="links__socials-item">
 											<a href="#" target="_blank" class="links__socials-item-inner"><svg>
-													<use href="#tt-svg"></use>
-												</svg></a>
-										</li>
-										<li class="links__socials-item">
-											<a href="#" target="_blank" class="links__socials-item-inner"><svg>
 													<use href="#x-c-svg"></use>
-												</svg></a>
-										</li>
-										<li class="links__socials-item">
-											<a href="#" target="_blank" class="links__socials-item-inner"><svg>
-													<use href="#wa-svg"></use>
-												</svg></a>
-										</li>
-										<li class="links__socials-item">
-											<a href="#" target="_blank" class="links__socials-item-inner"><svg>
-													<use href="#yt-svg"></use>
-												</svg></a>
-										</li>
-										<li class="links__socials-item">
-											<a href="#" target="_blank" class="links__socials-item-inner"><svg>
-													<use href="#tg-svg"></use>
 												</svg></a>
 										</li>
 										<li class="links__socials-item">
@@ -448,7 +476,6 @@
 												</svg></a>
 										</li>
 									</ul>
-									<a href="#" target="_blank" class="links__txt _desktop-only">ALL OFFICIAL MEDIAS</a>
 								</div>
 							</li>
 							<li class="links__item">
@@ -493,6 +520,7 @@
 								</div>
 							</li>
 						</ul>
+
 						<span class="links__main-heading">
 							<span>PARIVISION</span>
 							<span class="_desktop-only">TEAM</span>
