--- a/src/html/_js.htm
+++ b/src/html/_js.htm
@@ -25,6 +25,7 @@
   defer
   src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollTrigger.min.js"></script>
 <script defer src="https://unpkg.com/lenis@1.2.3/dist/lenis.min.js"></script>
+<script defer src="js/lenis.js"></script>
 <script
   defer
   src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
