--- a/app/schedule.html
+++ b/app/schedule.html
@@ -408,6 +408,33 @@
 					</div>
 				</div>
 			</div>
+			<!-- сообщение об отправке формы -->
+			<div id="messageModal" aria-hidden="true" class="modal">
+				<div class="modal__wrapper">
+					<div class="modal__content">
+						<div class="modal__body">
+							<button data-close type="button" class="modal__close">
+								<svg>
+									<use href="#cross-svg"></use>
+								</svg>
+							</button>
+							<div class="modal__inner">
+								<div class="modal__group modal__group_column">
+									<h2 class="modal__heading h-x">The form has been sent</h2>
+									<p class="modal__txt">Lorem ipsum dolor sit amet consectetur.</p>
+								</div>
+
+								<a href="#" class="modal__btn frame-btn frame-btn_black">
+									<span class="frame-btn__inner">
+										<span class="frame-btn__txt">OK</span>
+									</span>
+									<span class="border"><span class="border__inner"></span></span>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 			<div id="loader" class="preloader">
 				<div class="preloader__container container">
 					<div class="preloader__row">
