--- a/app/teams.html
+++ b/app/teams.html
@@ -405,6 +405,64 @@
 					</clipPath>
 				</svg>
 			</div>
+			<!-- пари промо -->
+			<div id="pariPromoModal" aria-hidden="true" class="modal">
+				<div class="modal__wrapper">
+					<div class="modal__content">
+						<div class="modal__body">
+							<button data-close type="button" class="modal__close">
+								<svg>
+									<use href="#cross-svg"></use>
+								</svg>
+							</button>
+							<div class="modal__inner">
+								<div class="modal__group">
+									<h2 class="modal__heading">
+										<span class="num">5×1000</span>
+									</h2>
+									<p style="background-image: url('img/logos/pari.svg')" class="modal__txt">
+										Freebets for  all newies at
+									</p>
+								</div>
+
+								<a href="https://i.pari.ru/pvcs2025" class="modal__btn frame-btn frame-btn_black">
+									<span class="frame-btn__inner">
+										<span class="frame-btn__txt">GO</span>
+									</span>
+									<span class="border"><span class="border__inner"></span></span>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- сообщение об отправке формы -->
+			<div id="messageModal" aria-hidden="true" class="modal">
+				<div class="modal__wrapper">
+					<div class="modal__content">
+						<div class="modal__body">
+							<button data-close type="button" class="modal__close">
+								<svg>
+									<use href="#cross-svg"></use>
+								</svg>
+							</button>
+							<div class="modal__inner">
+								<div class="modal__group modal__group_column">
+									<h2 class="modal__heading h-x">The form has been sent</h2>
+									<p class="modal__txt">Lorem ipsum dolor sit amet consectetur.</p>
+								</div>
+
+								<a href="#" class="modal__btn frame-btn frame-btn_black">
+									<span class="frame-btn__inner">
+										<span class="frame-btn__txt">OK</span>
+									</span>
+									<span class="border"><span class="border__inner"></span></span>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 
 		</div>
 	</div>
