--- a/src/teams.html
+++ b/src/teams.html
@@ -70,7 +70,7 @@
         </main>
 
         @@include('html/_preloader.htm',{}) @@include('html/_footer.htm',{})
-        @@include('html/_svg.htm',{})
+        @@include('html/_svg.htm',{}) @@include('html/_modals.htm',{})
       </div>
     </div>
 
